# ChangeLog for media-sound/mpdcron
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  19 Apr 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild:
  Keyworded x86.

  19 Apr 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild:
  Keyworded amd64.

  14 Jan 2010; James Rowe <jnrowe@gmail.com> mpdcron-9999.ebuild:
  Dropped keywords in live ebuild.

  09 Jan 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
  mpdcron-9999.ebuild, metadata.xml:
  Added support for building libnotify and scrobbler modules.

*mpdcron-9999 (09 Jan 2010)

  09 Jan 2010; James Rowe <jnrowe@gmail.com> +mpdcron-9999.ebuild:
  Added live git ebuild.

*mpdcron-0.3 (09 Jan 2010)

  09 Jan 2010; James Rowe <jnrowe@gmail.com> +mpdcron-0.3.ebuild,
  +metadata.xml:
  Initial ebuild, based on an ebuild by Matthew Turner.
