@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST mpdcron-0.3.tar.bz2 315412 RMD160 e2c4487ec6032fa7b50e4ffe7e03ff678f4e50e3 SHA1 05aea3bdec0c326ebd3cf9a7372d628c8727b66a SHA256 0d3ee40364f4748a18079277570f4e361928ff6216ad2450a49625f2dc954c5a
-EBUILD mpdcron-0.3.ebuild 1524 RMD160 026c2f88433630b82f35d90383c5ecc6b3867f8e SHA1 489164c9810305a8c83eacf0a9abf94929125e55 SHA256 5513edc9a24732e677be17e0bec6de73ce52d3fd9ac6126c6c09d40d8e896fae
-EBUILD mpdcron-9999.ebuild 1429 RMD160 36d32378d7aa764fbfa4b39e5805f910776f2f51 SHA1 ec3ff68f1e6f2e66653623b38f7fb3e702d99cca SHA256 c13297e53a54e36696cee560ec7874c6e5273a08e6a8153acafbad609d1553dd
-MISC ChangeLog 845 RMD160 662f9fee82ff6c13f7514e0b3261af9fa6e04ee5 SHA1 cc541a9ba018ad41b1961f5814126d2fcbc0051f SHA256 a2e0aa57e45cc833681c894f7e877e836e5c6bf861ce4c0f9411ac1361855186
+EBUILD mpdcron-0.3.ebuild 1741 RMD160 d42488c8bb113ebdda614dfa8f5803da6ae319d0 SHA1 ea15643cb7d8847daa717f93c11e590fe4f5f4f2 SHA256 016a1d2b0e49c53f0fd59acb3b6e36df13f8cb5ef7396bdea77aed7197ed4864
+EBUILD mpdcron-9999.ebuild 1732 RMD160 5a55f8d8a28ee1de4618ad31ef26b1c7be953eae SHA1 8d1417a114a2f21064198becccc7c3b0f6c010b2 SHA256 fc4c5d3c735a1084bda9b8aecfa74d8da094874297decd963c3b1e2a83e2b198
+MISC ChangeLog 970 RMD160 a8b17d3c59b8523ecd4a0462d9ff654f8c339cee SHA1 90e83a3bb453e33ceaf3c747c40282f3aec1289c SHA256 4c437147464be813dcca3dcd0cd9d1fd3f59fccaca025b7d0d8328f3e55c3894
 MISC metadata.xml 879 RMD160 02b2ca3ec2c8a1f291599d658bcf6e69251d86f0 SHA1 45fb598a57cfe687680d2fd075df2f2a17579c8c SHA256 61c4e72061da24f9b53d6d9a431a02cb979154d0fba3f15d3fba2aa1f2286703
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.15 (GNU/Linux)
 
-iEYEARECAAYFAkvMHG0ACgkQzJrj3cAXR0lXJwCfd3aH9vjuAdZ6Nd6UObbtSQEU
-mWsAoKabqPAphcOvyxVDH5Fv4emvCm7t
-=bxAL
+iEYEARECAAYFAkxl+BMACgkQzJrj3cAXR0nojgCeMn7RGQz+0WzfdUsAU7w+Qqjl
+BzAAnjQRD//yqvLHSk6WYEjEV8YX2sCj
+=EwYu
 -----END PGP SIGNATURE-----
