@@ -14,7 +14,7 @@ libnotify scrobbler zsh-completion
 
 2
 
-configure install
+configure install prepare
 
 
 
