@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  14 Aug 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild,
+  mpdcron-9999.ebuild:
+  Merged live and released ebuilds.
+
   19 Apr 2010; James Rowe <jnrowe@gmail.com> mpdcron-0.3.ebuild:
   Keyworded x86.
 
